2009-05-12  Sancho Lerena <slerena@gmail.com>

	* pandora_package_installer: Removed old, unused script.

2009-05-04  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Reset server status at start-up in case the
	  server did not cleanly shut down the last time.
	
	* bin/pandora_server: Fixed min_ff_event calculation.

2009-05-04  Ramon Novoa  <rnovoa@artica.es>


	* lib/PandoraFMS/DB.pm: Enabled mysql_auto_reconnect.

	* lib/PandoraFMS/SNMPServer.pm, lib/PandoraFMS/PluginServer.pm,
	  lib/PandoraFMS/NetworkServer.pm, lib/PandoraFMS/WMIServer.pm: Log
	  error messages when external programs are not found.

2009-04-28  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Disabled output from snmptrapd.

	* lib/PandoraFMS/Core.pm: Allow string comparisons for equal/not_equal
	  alerts.

2009-04-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Generate one event for each alert (instead
	  of one event for each action).

2009-04-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ProducerConsumerServer.pm,
	  lib/PandoraFMS/Server.pm: Properly set task queue size for
	  statistics.

2009-04-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm, lib/PandoraFMS/Core.pm: Generate
	  an event when executing a SNMP alert. Small fixes.

	* lib/PandoraFMS/ReconServer.pm: Enabled OS filtering.

2009-04-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Add a newline character after
	  writing a trap to the SNMP log to make it more readable.

	* lib/PandoraFMS/PluginServer.pm,
	  lib/PandoraFMS/ProducerConsumerServer.pm, lib/PandoraFMS/Server.pm,
	  lib/PandoraFMS/PredictionServer.pm, lib/PandoraFMS/Core.pm,
	  lib/PandoraFMS/DataServer.pm, lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/WMIServer.pm: Properly set tagente_estado.running_by.

2009-04-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed *inc data processing.

2009-04-22  Ramon Novoa  <rnovoa@artica.es>
